kubernetes/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: police-app
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None # Headless service for StatefulSet
