kubernetes/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: police-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
