kubernetes/15-neo4j-service.yaml
# Gen5: Neo4j Service
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: police-app
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
